[package]
name = "embercore-web-back"
version = "0.1.0"
authors = ["Rexagon <reide740@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.14"
actix-web = "1.0"
env_logger = "0.6"
jsonwebtoken = "6.0"
bcrypt = "0.4"
chrono = { version = "0.4", features = ["serde"] }
time = "0.1"
r2d2 = "0.8"
r2d2_redis = "0.10"
